fix(rc3): keep collections compatible with Android runtime